# plx2dist

./: CITATION.cff  CITATION.cff.md  LICENSE  README.md  plx2dist.py  plx2dist_backup.py  pyproject.toml
.github/workflows/: ci.yml
src/plx2dist/: __init__.py  cli.py  conversion.py  pipeline.py
tests/: test_conversion.py  test_plx2dist.py
