[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "plx2dist"
version = "0.1.0"
description = "Bayesian parallax-to-distance pipeline for stellar catalogues"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Alex Golovin", email = "agolovin@lsw.uni-heidelberg.de" },
]
keywords = ["astronomy", "astrometry", "parallax", "distance", "Gaia", "Bayesian"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "astropy>=5.2",
]

[project.optional-dependencies]
progress = ["tqdm>=4.64"]
dev = ["pytest>=7", "tqdm>=4.64"]

[project.scripts]
plx2dist = "plx2dist:main"

[project.urls]
Homepage = "https://github.com/AlexGolovin/plx2dist"
Repository = "https://github.com/AlexGolovin/plx2dist"
"Bug Tracker" = "https://github.com/AlexGolovin/plx2dist/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["plx2dist"]
